<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robot_tool</name>
  <version>1.0.0</version>
  <description>
    A standardized robot controller interface package that provides a unified API for different robot platforms.
    Supports dual-arm robots with automatic inverse kinematics, interpolation, and motion planning.
  </description>
  <maintainer email="your-email@example.com">Your Name</maintainer>
  <license>MIT</license>

  <author email="your-email@example.com">Your Name</author>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>jaka_robot_interfaces</depend>
  <depend>jiazhua_interfaces</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package> 